src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Geist";
  src: url("src/assets/fonts/Geist/GeistVariableVF.woff2") format("woff2");
  font-weight: 100 900;
  font-stretch: 50% 200%;
  font-style: normal;
}

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-balance;
  }

  p {
    @apply text-pretty;
  }
}

.circle-sm.left {
  --size: 50vh;
  position: absolute;
  top: 0;
  left: 0;

  width: var(--size);
  height: var(--size);
  background-color: #a6dced;
  border-radius: 100%;
  filter: blur(70px);
  opacity: 0.5;
  animation: moveVertical 30s ease infinite;
}

.circle-sm.right {
  --size: 50vh;

  position: absolute;
  right: 0;
  top: 0;

  width: var(--size);
  height: var(--size);
  background-color: #a6dced;
  border-radius: 100%;
  filter: blur(100px);
  opacity: 0.35;
  animation: moveVerticalInverted 25s ease infinite;
}

.circle-sm {
  z-index: 99;
}

.circle-lg {
  --size: 100vh;
  --color: #8214ef;
  --color: red;

  position: absolute;
  left: calc(50% - var(--size) / 2);
  top: -50%;

  width: var(--size);
  height: var(--size);
  background-color: var(--color);
  border-radius: 100%;
  filter: blur(150px);
  opacity: 0.5;
  animation: moveVerticalCenter 10s ease infinite;
}

@keyframes moveVerticalCenter {
  0%,
  100% {
    transform: translateY(-50%);
    opacity: 0;
  }
  50% {
    transform: translateY(15%);
    opacity: 0.35;
  }
}

@keyframes moveVertical {
  0%,
  100% {
    transform: translate(-50%, -50%);
  }
  50% {
    transform: translate(5%, 5%);
  }
}

@keyframes moveVerticalInverted {
  0%,
  100% {
    transform: translate(50%, -50%);
  }
  50% {
    transform: translate(-10%, 20%);
  }
}

